--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,7 +2,7 @@ version: "{build}"
 
 platform: x64
 
-clone_folder: c:\gopath\src\github.com\mpppk\cli-template
+clone_folder: c:\gopath\src\github.com\mpppk\sutaba-server
 
 environment:
   GOPATH: c:\gopath
