Add some properties to ServerCmdConfig

--- a/config.yml
+++ b/config.yml
@@ -1,2 +1,4 @@
 ErrorMessage: "@mpppk サーバ側でエラー発生したからなんとかして"
 TweetKeyword: "スタバなう"
+InReplyToUserID: 1354555700
+ClassifierServerHost: "https://sutaba-lkui2qyzba-an.a.run.app"
