Fix PORT environment variable bug

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,10 +3,24 @@ services:
   web:
     build: .
     ports:
-      - "1323:1323"
+      - "1323:5000"
     environment:
-      PORT: 1323
+      PORT: 5000
       TWITTER_CONSUMER_KEY: ${TWITTER_CONSUMER_KEY}
       TWITTER_CONSUMER_SECRET: ${TWITTER_CONSUMER_SECRET}
-      TWITTER_ACCESS_TOKEN: ${TWITTER_ACCESS_TOKEN}
-      TWITTER_ACCESS_TOKEN_SECRET: ${TWITTER_ACCESS_TOKEN_SECRET}
+      OWNER_TWITTER_ACCESS_TOKEN: ${OWNER_TWITTER_ACCESS_TOKEN}
+      OWNER_TWITTER_ACCESS_TOKEN_SECRET: ${OWNER_TWITTER_ACCESS_TOKEN_SECRET}
+      BOT_TWITTER_ACCESS_TOKEN: ${BOT_TWITTER_ACCESS_TOKEN}
+      BOT_TWITTER_ACCESS_TOKEN_SECRET: ${BOT_TWITTER_ACCESS_TOKEN_SECRET}
+  web-from-cr:
+    image: asia.gcr.io/sutaba/sutaba-server
+    ports:
+      - "1323:5000"
+    environment:
+      PORT: 5000
+      TWITTER_CONSUMER_KEY: ${TWITTER_CONSUMER_KEY}
+      TWITTER_CONSUMER_SECRET: ${TWITTER_CONSUMER_SECRET}
+      OWNER_TWITTER_ACCESS_TOKEN: ${OWNER_TWITTER_ACCESS_TOKEN}
+      OWNER_TWITTER_ACCESS_TOKEN_SECRET: ${OWNER_TWITTER_ACCESS_TOKEN_SECRET}
+      BOT_TWITTER_ACCESS_TOKEN: ${BOT_TWITTER_ACCESS_TOKEN}
+      BOT_TWITTER_ACCESS_TOKEN_SECRET: ${BOT_TWITTER_ACCESS_TOKEN_SECRET}
