Load sorry message from config file

--- a/config.yml
+++ b/config.yml
@@ -1,4 +1,5 @@
 ErrorTweetMessage: "@mpppk サーバ側でエラー発生したからなんとかして"
+SorryTweetMessage: "sorry!!"
 TweetKeyword: "スタバなう"
 OwnerTwitterUserID: 1354555700
 BotTwitterUserID: 1162195935398547457
