--- a/config.yml
+++ b/config.yml
@@ -1,6 +1,5 @@
-ErrorTweetMessage: "@mpppk ピピーッ❗️🔔⚡️スタバ警察です❗️👊👮❗️アナタ💕は❌スタバ法❌第500条🙋「スタバサーバ💕でエラーを起こしてゎイケナイ❗️」に違反しています😡今スグ直しなｻｲ❗️❗️❗️❗️✌️👮🔫"
-SorryTweetMessage: "ピピーッ❗️🔔⚡️スタバ警察です❗️👊👮❗️現在本官💕は❌スタバ法❌第501条🙋「スタバ警察👮‍♂️💕はタイヘン💦💦💦疲れたらいつでも休んでネ☺️☺️☺️❗️」に従って職務放棄中☕️☕️☕️だから判定はしまセン❗️❗暑い日が続くけどミンナも無理しないでネ❗️️❗️✌️👮"
-TweetKeyword: "スタバなう"
-OwnerTwitterUserID: 1354555700
-BotTwitterUserID: 1162195935398547457
-ClassifierServerHost: "https://sutaba-lkui2qyzba-an.a.run.app"
+ERROR_TWEET_MESSAGE: "@mpppk ピピーッ❗️🔔⚡️スタバ警察です❗️👊👮❗️アナタ💕は❌スタバ法❌第500条🙋「スタバサーバ💕でエラーを起こしてゎイケナイ❗️」に違反しています😡今スグ直しなｻｲ❗️❗️❗️❗️✌️👮🔫"
+SORRY_TWEET_MESSAGE: "ピピーッ❗️🔔⚡️スタバ警察です❗️👊👮❗️現在本官💕は❌スタバ法❌第501条🙋「スタバ警察👮‍♂️💕はタイヘン💦💦💦疲れたらいつでも休んでネ☺️☺️☺️❗️」に従って職務放棄中☕️☕️☕️だから判定はしまセン❗️❗暑い日が続くけどミンナも無理しないでネ❗️️❗️✌️👮"
+TWEET_KEYWORD: "スタバなう"
+OWNER_TWITTER_USER_ID: 1354555700
+BOT_TWITTER_USER_ID: 1162195935398547457
