--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -20,4 +20,4 @@ steps:
             '--cache-from', 'asia.gcr.io/$PROJECT_ID/sutaba-server:$BRANCH_NAME',
     ]
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['push', 'asia.gcr.io/$PROJECT_ID/sutaba-server:$BRANCH_NAME'
+    args: ['push', 'asia.gcr.io/$PROJECT_ID/sutaba-server:$BRANCH_NAME']
