--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,8 +1,10 @@
 steps:
   - name: 'gcr.io/cloud-builders/go'
+    env: ['GO111MODULE=on']
     args: ['make', 'lint']
     waitFor: ['-']
   - name: 'gcr.io/cloud-builders/go'
+    env: ['GO111MODULE=on']
     args: ['make', 'test']
     waitFor: ['-']
   - name: 'gcr.io/cloud-builders/docker'
