--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,10 +1,10 @@
 steps:
   - name: 'gcr.io/cloud-builders/go'
-    env: ['GO111MODULE=on']
+    env: ['GO111MODULE=on', 'PROJECT_ROOT=sutaba-server']
     args: ['make', 'lint']
     waitFor: ['-']
   - name: 'gcr.io/cloud-builders/go'
-    env: ['GO111MODULE=on']
+    env: ['GO111MODULE=on', 'PROJECT_ROOT=sutaba-server']
     args: ['make', 'test']
     waitFor: ['-']
   - name: 'gcr.io/cloud-builders/docker'
