--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,13 +1,19 @@
 steps:
   - name: 'gcr.io/cloud-builders/go'
     env: ['GO111MODULE=on', 'PROJECT_ROOT=sutaba-server']
-    entrypoint: 'make'
-    args: ['lint']
+    entrypoint: 'bash'
+    args:
+      - '-c'
+      - |
+        apt-get install build-essential && make lint
     waitFor: ['-']
   - name: 'gcr.io/cloud-builders/go'
     env: ['GO111MODULE=on', 'PROJECT_ROOT=sutaba-server']
-    entrypoint: 'make'
-    args: ['test']
+    entrypoint: 'bash'
+    args:
+      - '-c'
+      - |
+        apt-get install build-essential && make test
     waitFor: ['-']
   - name: 'gcr.io/cloud-builders/docker'
     id: 'docker-pull'
