--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,6 +1,14 @@
+variables:
+  go-modules-volume: &go-modules-volume
+    name: go-modules
+    path: /go
+  gopath: &gopath 'GOPATH=/go'
+  enable_gomodule: &enable_gomodule 'GO111MODULE=on'
+  go-mod-download-id: &go-mod-download-id 'go-mod-download'
+  install-build-essential-id: &install-build-essential 'install-build-essential'
 steps:
   - name: 'gcr.io/cloud-builders/go:debian'
-    id: 'install-build-essential'
+    id: *install-build-essential
     env: ['GO111MODULE=on', 'GOPATH=/go']
     entrypoint: 'bash'
     args:
@@ -9,29 +17,23 @@ steps:
         apt-get update && apt-get install -y build-essential && cp /usr/bin/make ./
     waitFor: ['-']
   - name: 'gcr.io/cloud-builders/go'
-    id: 'go-mod-download'
-    env: ['GO111MODULE=on', 'GOPATH=/go']
+    id: *go-mod-download-id
+    env: [*enable_gomodule, *gopath]
     args: ['mod', 'download']
     waitFor: ['-']
-    volumes:
-      - name: go-modules
-        path: /go
+    volumes: [*go-modules-volume]
   - name: 'gcr.io/cloud-builders/go:debian'
-    env: ['GO111MODULE=on', 'GOPATH=/go']
+    env: [*enable_gomodule, *gopath]
     entrypoint: './make'
     args: ['lint']
-    waitFor: ['go-mod-download', 'install-build-essential']
-    volumes:
-      - name: go-modules
-        path: /go
+    waitFor: [*go-mod-download-id, *install-build-essential]
+    volumes: [*go-modules-volume]
   - name: 'gcr.io/cloud-builders/go:debian'
-    env: ['GO111MODULE=on', 'GOPATH=/go']
+    env: [*enable_gomodule, *gopath]
     entrypoint: './make'
     args: ['lint']
-    waitFor: ['go-mod-download', 'install-build-essential']
-    volumes:
-      - name: go-modules
-        path: /go
+    waitFor: [*go-mod-download-id, *install-build-essential]
+    volumes: [*go-modules-volume]
   - name: 'gcr.io/cloud-builders/docker'
     id: 'docker-pull'
     entrypoint: 'bash'
