--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,4 +1,5 @@
 steps:
+  # Install make command
   - name: 'gcr.io/cloud-builders/go:debian'
     id: &install-build-essential 'install-build-essential'
     env: [&gomodule_mode 'GO111MODULE=on', &gopath 'GOPATH=/go']
@@ -8,6 +9,8 @@ steps:
       - |
         apt-get update && apt-get install -y build-essential && cp /usr/bin/make ./
     waitFor: ['-']
+
+  # Download go modules
   - name: 'gcr.io/cloud-builders/go'
     id: &go-mod-download-id 'go-mod-download'
     env: [*gomodule_mode, *gopath]
@@ -17,18 +20,24 @@ steps:
       - &go-modules-volume
         name: go-modules
         path: /go
+
+  # Lint go codes
   - name: 'gcr.io/cloud-builders/go:debian'
     env: [*gomodule_mode, *gopath]
     entrypoint: './make'
     args: ['lint']
     waitFor: [*go-mod-download-id, *install-build-essential]
     volumes: [*go-modules-volume]
+
+  # Test go codes
   - name: 'gcr.io/cloud-builders/go:debian'
     env: [*gomodule_mode, *gopath]
     entrypoint: './make'
     args: ['lint']
     waitFor: [*go-mod-download-id, *install-build-essential]
     volumes: [*go-modules-volume]
+
+  # Pull latest docker image for using as cache
   - name: 'gcr.io/cloud-builders/docker'
     id: 'docker-pull'
     entrypoint: 'bash'
@@ -37,14 +46,20 @@ steps:
       - '-c'
       - |
         docker pull asia.gcr.io/$PROJECT_ID/$REPO_NAME:master || exit 0
+
+  # Build docker image
   - name: 'gcr.io/cloud-builders/docker'
     waitFor: ['docker-pull']
     args: [ 'build',
             '-t', 'asia.gcr.io/$PROJECT_ID/$REPO_NAME:$BRANCH_NAME', '.',
             '--cache-from', 'asia.gcr.io/$PROJECT_ID/$REPO_NAME:master',
     ]
+
+  # Push docker image to Container Registry
   - name: 'gcr.io/cloud-builders/docker'
     args: ['push', 'asia.gcr.io/$PROJECT_ID/$REPO_NAME:$BRANCH_NAME']
+
+  # Deploy to Cloud Run
   - name: 'gcr.io/cloud-builders/gcloud'
     entrypoint: 'bash'
     env: ['REPO_NAME=$REPO_NAME']
@@ -55,5 +70,6 @@ steps:
           gcloud beta run deploy sutaba-staging-server \
           --image asia.gcr.io/sutaba/$REPO_NAME:master \
           --platform managed \
+          --region asia-northeast1
           --update-env-vars CLASSIFIER_SERVER_HOST=https://classifier-server-lkui2qyzba-an.a.run.app
         fi
