--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -71,5 +71,6 @@ steps:
           --platform managed \
           --region asia-northeast1 \
           --update-env-vars CLASSIFIER_SERVER_HOST=https://classifier-server-lkui2qyzba-an.a.run.app \
-          --vergosity debug
+          --verbosity debug
+          gcloud info --run-diagnostics
         fi
