--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -66,12 +66,11 @@ steps:
       - '-c'
       - |
         if [ $BRANCH_NAME = "add_cloud_build_settings" ]; then
-          gcloud beta run deploy $REPO_NAME-$BRANCH_NAME \
+          gcloud beta run deploy $REPO_NAME-test \
           --image asia.gcr.io/$PROJECT_ID/$REPO_NAME:$BRANCH_NAME \
           --platform managed \
           --region asia-northeast1 \
           --update-env-vars CLASSIFIER_SERVER_HOST=https://classifier-server-lkui2qyzba-an.a.run.app \
           --verbosity debug \
           --allow-unauthenticated
-          gcloud info --run-diagnostics
         fi
