Remove unused env from docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,12 +9,10 @@ services:
       CLASSIFIER_SERVER_HOST: https://classifier-server-lkui2qyzba-an.a.run.app
       TWITTER_CONSUMER_KEY: ${TWITTER_CONSUMER_KEY}
       TWITTER_CONSUMER_SECRET: ${TWITTER_CONSUMER_SECRET}
-      OWNER_TWITTER_ACCESS_TOKEN: ${OWNER_TWITTER_ACCESS_TOKEN}
-      OWNER_TWITTER_ACCESS_TOKEN_SECRET: ${OWNER_TWITTER_ACCESS_TOKEN_SECRET}
       BOT_TWITTER_ACCESS_TOKEN: ${BOT_TWITTER_ACCESS_TOKEN}
       BOT_TWITTER_ACCESS_TOKEN_SECRET: ${BOT_TWITTER_ACCESS_TOKEN_SECRET}
-  web-from-cr:
-    image: asia.gcr.io/sutaba/sutaba-server
+  web-from-cr-master:
+    image: asia.gcr.io/sutaba/sutaba-server:master
     ports:
       - "1323:5000"
     environment:
@@ -22,7 +20,5 @@ services:
       CLASSIFIER_SERVER_HOST: https://classifier-server-lkui2qyzba-an.a.run.app
       TWITTER_CONSUMER_KEY: ${TWITTER_CONSUMER_KEY}
       TWITTER_CONSUMER_SECRET: ${TWITTER_CONSUMER_SECRET}
-      OWNER_TWITTER_ACCESS_TOKEN: ${OWNER_TWITTER_ACCESS_TOKEN}
-      OWNER_TWITTER_ACCESS_TOKEN_SECRET: ${OWNER_TWITTER_ACCESS_TOKEN_SECRET}
       BOT_TWITTER_ACCESS_TOKEN: ${BOT_TWITTER_ACCESS_TOKEN}
       BOT_TWITTER_ACCESS_TOKEN_SECRET: ${BOT_TWITTER_ACCESS_TOKEN_SECRET}
