Add twitter screen name option

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,8 @@ services:
       TWITTER_CONSUMER_SECRET: ${TWITTER_CONSUMER_SECRET}
       BOT_TWITTER_ACCESS_TOKEN: ${BOT_TWITTER_ACCESS_TOKEN}
       BOT_TWITTER_ACCESS_TOKEN_SECRET: ${BOT_TWITTER_ACCESS_TOKEN_SECRET}
+      BOT_TWITTER_USER_ID: 1166922179323158528
+      BOT_TWITTER_USER_SCREEN_NAME: sutaba_police2
   web-from-cr-master:
     image: asia.gcr.io/sutaba/sutaba-server:master
     ports:
@@ -22,3 +24,5 @@ services:
       TWITTER_CONSUMER_SECRET: ${TWITTER_CONSUMER_SECRET}
       BOT_TWITTER_ACCESS_TOKEN: ${BOT_TWITTER_ACCESS_TOKEN}
       BOT_TWITTER_ACCESS_TOKEN_SECRET: ${BOT_TWITTER_ACCESS_TOKEN_SECRET}
+      BOT_TWITTER_USER_ID: 1166922179323158528
+      BOT_TWITTER_USER_SCREEN_NAME: sutaba_police2
