--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -59,5 +59,14 @@ steps:
          --cache-from asia.gcr.io/$PROJECT_ID/$REPO_NAME:master
     substitutions:
       _NEW_BRANCH_NAME: $_TMP_VAR
-    images:
-      - "asia.gcr.io/$PROJECT_ID/$REPO_NAME"
+
+  # Push docker image to Container Registry
+  - name: 'gcr.io/cloud-builders/docker'
+    entrypoint: 'bash'
+    args:
+      - "-c"
+      - |-
+        _TMP_VAR=`echo $BRANCH_NAME | sed -r 's,/,-,g'`; \
+         docker push asia.gcr.io/$PROJECT_ID/$REPO_NAME:$_NEW_BRANCH_NAME
+    substitutions:
+      _NEW_BRANCH_NAME: $_TMP_VAR
