--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -49,11 +49,22 @@ steps:
   # Build docker image
   - name: 'gcr.io/cloud-builders/docker'
     waitFor: ['docker-pull']
-    args: [ 'build',
-            '-t', 'asia.gcr.io/$PROJECT_ID/$REPO_NAME:$BRANCH_NAME', '.',
-            '--cache-from', 'asia.gcr.io/$PROJECT_ID/$REPO_NAME:master',
-    ]
+    entrypoint: 'bash'
+    args:
+      - "-c"
+      - |-
+        _TMP_VAR=`echo $BRANCH_NAME | sed -r 's,/,-,g'`; \
+         docker build \
+         -t asia.gcr.io/$PROJECT_ID/$REPO_NAME:$_NEW_BRANCH_NAME . \
+         --cache-from asia.gcr.io/$PROJECT_ID/$REPO_NAME:master
 
   # Push docker image to Container Registry
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['push', 'asia.gcr.io/$PROJECT_ID/$REPO_NAME:$BRANCH_NAME']
+    entrypoint: 'bash'
+    args:
+      - "-c"
+      - |-
+        _TMP_VAR=`echo $BRANCH_NAME | sed -r 's,/,-,g'`; \
+         docker push asia.gcr.io/$PROJECT_ID/$REPO_NAME:$_NEW_BRANCH_NAME
+substitutions:
+  _NEW_BRANCH_NAME: $_TMP_VAR
