--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -65,6 +65,6 @@ steps:
       - "-c"
       - |-
         _TMP_VAR=`echo $BRANCH_NAME | sed -r 's,/,-,g'`; \
-         docker push asia.gcr.io/$PROJECT_ID/$REPO_NAME:$_NEW_BRANCH_NAME
+         docker push asia.gcr.io/$PROJECT_ID/$REPO_NAME:${_NEW_BRANCH_NAME}
 substitutions:
   _NEW_BRANCH_NAME: $_TMP_VAR
