--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -67,6 +67,9 @@ steps:
       - |-
         echo ${_NEW_BRANCH_NAME}xxx; \
         _TMP_VAR=`echo $BRANCH_NAME | sed -r 's,/,-,g'`; \
-        echo ${_NEW_BRANCH_NAME}yyy
+        TMP_VAR=`echo $BRANCH_NAME | sed -r 's,/,-,g'`; \
+        echo ${_NEW_BRANCH_NAME}yyy; \
+        echo $_TMP_VAR; \
+        echo $TMP_VAR
 substitutions:
   _NEW_BRANCH_NAME: $_TMP_VAR
