--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -69,7 +69,7 @@ steps:
         _TMP_VAR=`echo $BRANCH_NAME | sed -r 's,/,-,g'`; \
         TMP_VAR=`echo $BRANCH_NAME | sed -r 's,/,-,g'`; \
         echo ${_NEW_BRANCH_NAME}yyy; \
-        echo $_TMP_VAR; \
-        echo $TMP_VAR
+        echo ${_TMP_VAR}zzz; \
+        echo ${TMP_VAR}111
 substitutions:
   _NEW_BRANCH_NAME: $_TMP_VAR
