--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -55,7 +55,7 @@ steps:
       - |-
         _TMP_VAR=`echo $BRANCH_NAME | sed -r 's,/,-,g'`; \
          docker build \
-         -t asia.gcr.io/$PROJECT_ID/$REPO_NAME:$_NEW_BRANCH_NAME . \
+         -t asia.gcr.io/$PROJECT_ID/$REPO_NAME:`echo $BRANCH_NAME | sed -r 's,/,-,g'` . \
          --cache-from asia.gcr.io/$PROJECT_ID/$REPO_NAME:master
 
   # Push docker image to Container Registry
