--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -49,11 +49,10 @@ steps:
   # Build docker image
   - name: 'gcr.io/cloud-builders/docker'
     waitFor: ['docker-pull']
-    entrypoint: 'docker'
+    entrypoint: 'bash'
     args:
-      - build
-      - -t
-      - asia.gcr.io/$PROJECT_ID/$REPO_NAME:`echo $BRANCH_NAME | sed -r 's,/,-,g'`
-      - .
-      - --cache-from
-      - asia.gcr.io/$PROJECT_ID/$REPO_NAME:master
+      - "-c"
+      - |-
+        docker build \
+        -t asia.gcr.io/$PROJECT_ID/$REPO_NAME:`echo $BRANCH_NAME | sed -r 's,/,-,g'` . \
+        --cache-from asia.gcr.io/$PROJECT_ID/$REPO_NAME:master
